# QRcode_data

./: CMakeLists.txt  README.md
lib/qrcodegen/: QrCode.cpp
src/: decoder.cpp  decoder.h  encoder.cpp  encoder.h  main.cpp
